--- a/templates/home.html
+++ b/templates/home.html
@@ -5,13 +5,23 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<title>Job Scraper</title>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+		/>
 	</head>
 	<body>
-		<h1>Job Scraper</h1>
-		<h4>What job do you want?</h4>
-		<form action="/search">
-			<input type="text" name="keyword" placeholder="Write a keyword please" />
-			<button>Search</button>
-		</form>
+		<main class="container">
+			<h1>Job Scraper</h1>
+			<h4>What job do you want?</h4>
+			<form action="/search">
+				<input
+					type="text"
+					name="keyword"
+					placeholder="Write a keyword please"
+				/>
+				<button>Search</button>
+			</form>
+		</main>
 	</body>
 </html>
