--- a/templates/search.html
+++ b/templates/search.html
@@ -12,7 +12,11 @@
 	</head>
 	<body>
 		<main class="container">
+			<a href="/">Back to Search</a>
 			<h1>Search Results for: "{{keyword}}"</h1>
+			<form action="/export">
+				<button type="submit">Click to Export</button>
+			</form>
 			<figure>
 				<table role="grid">
 					<thead>
